# led_matrix_rust

./: .gitmodules  Cargo.toml  README.md  build.rs
html/: index.html  ip.js  script.js  styles.css
src/: build.rs  main.rs  wrapper.h
